# NVIDIA-OV-CDSCV-Task

./: ASSIGNMENT.md  README.md  pyproject.toml
minipaste/app/: __init__.py  commands.py  config.py
minipaste/app/api/: database.py  models.py  views.py
tests/: conftest.py  test_paste.py
